Final cleanup. It's done.

--- a/FrontBackMatter/authorship.tex
+++ b/FrontBackMatter/authorship.tex
@@ -6,13 +6,13 @@
         \begin{tabular}{|l|l|l|}
           \hline
           \thead{Section} & \thead{Primary Author} & \thead{Primary Editor} \\ \hline
-          Abstract & Jonas & All \\ \hline
-          Executive Summary & Carolina and Keirstan & All \\ \hline
+          Abstract & Jonas & Keirstan and Jonas \\ \hline
+          Executive Summary & Carolina and Keirstan & Keirstan and Jonas \\ \hline
           Introduction & All & All \\ \hline
           Background & All & Jonas, Carolina, and Luis \\ \hline
           Methodology & Keirstan and Luis & Keirstan \\ \hline
           Results & Jonas and Keirstan & Keirstan and Carolina \\ \hline
-          Recommendations & Carolina and Keirstan & All \\ \hline
+          Recommendations & Carolina and Keirstan & Carolina, Keirstan, and Luis \\ \hline
           Bibliography & All & Luis \\ \hline
           Appendices & Carolina & Jonas and Luis \\ \hline
         \end{tabular}
