--- a/FrontBackMatter/executivesummary.tex
+++ b/FrontBackMatter/executivesummary.tex
@@ -47,7 +47,7 @@ The three projects we focused on when completing these objectives and producing 
   \item{Failure to consider the context in which a renewable energy technology is being implemented can lead to poor performance and increased required maintenance.}
   \item{Educating the community about new technology before installation can lead to community support.}
   \item{Working with experienced engineers can make a big difference in the project timeline and post project effectiveness.}
-  \item{Improving a building’s energy efficiency improvements prior to or in addition to upgrading the heating system may lead to increased cost savings.}
+  \item{Improving a building's energy efficiency improvements prior to or in addition to upgrading the heating system may lead to increased cost savings.}
   \item{Public housing rules and regulations can be barriers when implementing a renewable technology project.}
   \item{Failure to consider context when choosing a metering system can lead to problems with gathering data.}
 \end{itemize}
@@ -93,4 +93,4 @@ The three projects we focused on when completing these objectives and producing 
   \item{There be investment in educating contractors and electricians in renewable thermal technology.}
 \end{itemize}
 
-\par We achieved our goal of supporting the DOER by evaluating three renewable thermal projects to improve and promote the installation of renewable thermal systems, and produced informational case studies for each project site we studied. It is our hope that the case studies we produced will both promote the DOER’s renewable thermal programs and provide information to potential project site leaders that will, along with the list of recommendations, aid in improving renewable thermal project processes. As the number of successful renewable thermal projects increases in the Commonwealth of Massachusetts, greenhouse gas emissions and fossil fuel dependence will decrease, resulting in a healthier and more sustainable future.
+\par We achieved our goal of supporting the DOER by evaluating three renewable thermal projects to improve and promote the installation of renewable thermal systems, and produced informational case studies for each project site we studied. It is our hope that the case studies we produced will both promote the DOER's renewable thermal programs and provide information to potential project site leaders that will, along with the list of recommendations, aid in improving renewable thermal project processes. As the number of successful renewable thermal projects increases in the Commonwealth of Massachusetts, greenhouse gas emissions and fossil fuel dependence will decrease, resulting in a healthier and more sustainable future.
