--- a/introduction.tex
+++ b/introduction.tex
@@ -8,7 +8,7 @@
 \par The U.S. obtains more than 80\% of its energy from fossil fuels such as oil , coal, and natural gas, which means that with an increase in energy use comes an increase in greenhouse gas emissions (The National Academies, 2015). Buildings are now the largest sector of energy use, ahead of both industry and transportation, accounting for 41\% of all energy used in the U.S. (USGBC, 2015; Perez-Lombard, 2008). Furthermore, buildings are responsible for 50\% of the greenhouse gas emissions in developed countries, such as the U.S. (Rezaie, 2013). Public buildings specifically are large energy consumers because they are used by many people, are large in size, and operate frequently. Furthermore, public buildings are sometimes reliant on costly \#2 heating oil which emits the most greenhouse gas emissions of any heating source (DOER, 2015). The U.S. views the use of renewable resources as a potential solution to the problem of fossil fuel dependence and the negative consequences that are associated (EIA, 2015). For these reasons, buildings have become a primary focus for reduction of energy consumption and for renewable energy implementation.
 \par The Commonwealth of Massachusetts is working towards using renewable resources to address the issue of greenhouse gas emissions caused by fossil fuel use. In a legislative effort to reduce the use of fossil fuels in the Commonwealth of Massachusetts, the Global Warming Solutions Act (GWSA) was enacted in August of 2008. The GWSA created a framework for reducing heat-trapping emissions to levels that scientists believe gives humanity a chance of avoiding the worst effects of global warming. Pursuant to the GWSA, all sectors of the economy must reach a target of a 25\% reduction of Greenhouse Gas (GHG) emissions by 2020 and an 80\% reduction by 2050  (EEA, 2015).
 \par As a result of the GWSA, many programs exist regarding energy efficiency and the use of renewable resources. For example, Mass Save (sponsored by the investor-owned utility companies in the state) provides assistance to update old buildings to be more energy efficient and use less fossil fuel by providing free energy audits, LED light bulbs, air sealing, and financial incentives for adding insulation. In addition, the Massachusetts Clean Energy Center (Mass CEC) has offered grants for residential and commercial renewable thermal systems and district energy configurations, where one renewable heating/cooling source provides energy for multiple facilities arranged in a complex. The Department of Energy Resources (DOER) has implemented various programs that provide funding and guidance to project sites looking to implement renewable energy systems in buildings (Mass Department of Energy Resources, 2015). One DOER program is the Renewable Thermal Program, which provides technical assistance and grant funding to municipalities. Included in this program is the “Schools and Public Housing Integrating Renewables and Efficiency” Program (SAPHIRE), which focuses specifically on providing dedicated technical assistance and grant funding to K-12 public schools and public housing developments (Mass Department of Energy Resources, 2015).
-\par These programs had made great strides toward reducing fossil fuel use in the Commonwealth, but were lacking an evaluation and explanation of existing project processes. Evaluations and explanations of renewable thermal project processes would allow for future improvement while also providing information necessary to promote the DOER’s programs (DOER, 2015). The goal of our project was \goal. In order to achieve this goal, we completed the following three research objectives to produce case studies to evaluate pilot renewable thermal programs:
+\par These programs had made great strides toward reducing fossil fuel use in the Commonwealth, but were lacking an evaluation and explanation of existing project processes. Evaluations and explanations of renewable thermal project processes would allow for future improvement while also providing information necessary to promote the DOER's programs (DOER, 2015). The goal of our project was \goal. In order to achieve this goal, we completed the following three research objectives to produce case studies to evaluate pilot renewable thermal programs:
 \begin{enumerate}
   \item{Identify the questions and concerns past project site leaders have had when considering implementing a renewable thermal project.}
   \item{Determine project implementation processes and challenges of renewable thermal projects.}
