--- a/recommendations.tex
+++ b/recommendations.tex
@@ -11,7 +11,7 @@
 \par By continuing to create these case studies, found in Appendix 5, the DOER will be able to present more examples of similar projects for potential site leaders to learn from. As seen in the following section, we learned about the importance of providing feasibility studies to potential project sites from the interview with our sponsor. It is our hope that this will lead to more renewable thermal projects each with smoother project processes.
 
 \subsection{We recommend that the DOER bring case studies when consulting with new project sites}
-\par In the interview with our sponsor from the DOER, we learned that potential project site leaders often ask the question of who else has implemented a similar renewable thermal project to the one they’re considering. Our sponsor mentioned that while potential project site leaders seemed wary at first, due to many of these technologies being so new, when they learned that similar projects had been implemented in similar municipalities, the potential project site leaders felt more comfortable and at ease. When we interviewed the two individuals from Southern Berkshire Regional School District, we showed them an example case study, found in Appendix 2. They said that they would have liked to have seen a similar case study at the beginning of their project process. These project site leaders from the Southern Berkshire Regional School District and the project site leaders from Amherst College both mentioned that they visited other sites that had already implemented biomass heating systems before making the final decision to move forward with their projects. By providing the potential project sites with case studies of similar projects, the DOER will be able to continue to provide the potential project sites not only with information regarding an example project process but also a point of contact for potential project site leaders to use when making their final decisions regarding their renewable thermal project.
+\par In the interview with our sponsor from the DOER, we learned that potential project site leaders often ask the question of who else has implemented a similar renewable thermal project to the one they're considering. Our sponsor mentioned that while potential project site leaders seemed wary at first, due to many of these technologies being so new, when they learned that similar projects had been implemented in similar municipalities, the potential project site leaders felt more comfortable and at ease. When we interviewed the two individuals from Southern Berkshire Regional School District, we showed them an example case study, found in Appendix 2. They said that they would have liked to have seen a similar case study at the beginning of their project process. These project site leaders from the Southern Berkshire Regional School District and the project site leaders from Amherst College both mentioned that they visited other sites that had already implemented biomass heating systems before making the final decision to move forward with their projects. By providing the potential project sites with case studies of similar projects, the DOER will be able to continue to provide the potential project sites not only with information regarding an example project process but also a point of contact for potential project site leaders to use when making their final decisions regarding their renewable thermal project.
 
 \subsection{We recommend that the DOER provide examples of cost comparisons of fossil fuels and renewable energy including implementation and operational costs when consulting potential project sites}
 \par Given the strong interest in the financial aspects of proposed projects we recommend presenting factual data that shows the cost comparison of the renewable systems considered along with a comparable fossil fuel system as an incentive for potential project leaders. Frequently, renewable resources can be more affordable than fossil fuels but project site leaders can be unaware of this since they do not have a concrete comparison between the two. For example, Amherst College and Southern Berkshire Regional School both initially considered non-renewable resources and it was not until they did a long-term cost comparison between renewable and non renewable heating sources that they noticed that a renewable resource would be more affordable overall, especially with the DOER incentive. 
@@ -19,7 +19,7 @@
 \section{Recommendation Relating to Community Education}
 \par Following our analysis of the project process at the Southern Berkshire Regional School, we learned of the importance of community education and community support. Therefore, we recommend that:
 \subsection{We recommend that the DOER provide methods or examples for conducting outreach and education of the community on renewable thermal technologies when consulting potential project sites}
-It is important to educate the community about the new technology that project site leaders are aiming to implement, especially if a portion of the project is to be publicly funded. As noted in finding 4.3.3, if Southern Berkshire had not educated the community and gained community support, they would not have been able to fund the project. Fortunately, the DOER was aware of the importance of community education and provided the Southern Berkshire Regional School District with the necessary support to educate the community. In the case of the Sudbury Public Housing Development, also listed in finding 4.3.3 the community wasn’t educated and the technology was used incorrectly, decreasing the effectiveness of the project. 
+It is important to educate the community about the new technology that project site leaders are aiming to implement, especially if a portion of the project is to be publicly funded. As noted in finding 4.3.3, if Southern Berkshire had not educated the community and gained community support, they would not have been able to fund the project. Fortunately, the DOER was aware of the importance of community education and provided the Southern Berkshire Regional School District with the necessary support to educate the community. In the case of the Sudbury Public Housing Development, also listed in finding 4.3.3 the community wasn't educated and the technology was used incorrectly, decreasing the effectiveness of the project. 
 
 \section{Recommendations Relating to Feasibility Studies}
 \par In all of the project sites that we studied, data from our on-site visits highlighted the importance of commissioning a feasibility study. Therefore, we recommend that:
@@ -27,7 +27,7 @@ It is important to educate the community about the new technology that project s
 \par Since each municipal building is not the same in design, each renewable thermal system installation will be different. Occasionally, especially in older school buildings, there are issues with the building (leaking pipes, asbestos, etc.) that can be uncovered during the investigative work involved in producing a case study. If a project began and issues like asbestos were present in the building, many problems would arise including time delays, and increased expenses. Feasibility studies can also include options involving different renewable system designs as well as cost and maintenance comparisons of the proposed renewable system and the existing fossil fuel system. As stated in finding 4.3.1, commissioning a feasibility study prior to beginning a renewable project can be very valuable. Therefore, we recommend that a feasibility study be completed at each potential project site. Since this recommendation can be aimed at both the DOER and potential project sites, we have provided both as recommendations that follow.
 
 \subsection{We recommend that potential project sites commission a feasibility study prior to beginning a renewable thermal project}
-\par As explained above, it would be in the potential project site leader’s and community’s best interest to commission a feasibility study prior to beginning construction on a renewable thermal project. Not only do feasibility studies provide information regarding potential design of a new system and can uncover underlying issues within the building, they can also be used as informational materials for both potential engineering firms/contractors and the community. Since feasibility studies often include information regarding the general design requirements for a new system, this information can be used to inform potential engineering firms/contractors so that they are more informed about the project before they take it on. Feasibility studies can also be used to educate and increase community support. As discussed in section 2.3.1, it can be beneficial to a community to see a written document explaining the details of a project and that using a renewable thermal system is feasible in their application. For these reasons, we recommend that potential project sites commission a feasibility study prior to beginning a renewable thermal project,
+\par As explained above, it would be in the potential project site leader's and community's best interest to commission a feasibility study prior to beginning construction on a renewable thermal project. Not only do feasibility studies provide information regarding potential design of a new system and can uncover underlying issues within the building, they can also be used as informational materials for both potential engineering firms/contractors and the community. Since feasibility studies often include information regarding the general design requirements for a new system, this information can be used to inform potential engineering firms/contractors so that they are more informed about the project before they take it on. Feasibility studies can also be used to educate and increase community support. As discussed in section 2.3.1, it can be beneficial to a community to see a written document explaining the details of a project and that using a renewable thermal system is feasible in their application. For these reasons, we recommend that potential project sites commission a feasibility study prior to beginning a renewable thermal project,
 
 \subsection{We recommend that the DOER strongly suggest or make it a requirement of their grant program that renewable thermal project sites commission a feasibility study prior to beginning a renewable thermal project}
 \par We recognize that the DOER does not only fund these renewable thermal projects, but also provides the project site leaders and communities with guidance and support throughout the project process. Since the DOER provides funding to the project sites, they have the ability to leverage this funding when suggesting that the project sites commission a feasibility study. For this reason, we recommend that the DOER make it their responsibility to ensure that a feasibility study be completed at a project site before construction begins.
@@ -41,7 +41,7 @@ It is important to educate the community about the new technology that project s
 \section{Recommendations Relating to Experienced Engineers and Contractors}
 \par We heard from interviewees at all three sites that the experience of the engineers working on the project makes a huge difference in the project planning and installation processes. We therefore recommend that:
 \subsection{We recommend that project sites work with engineering firms and contractors that are familiar with renewable technologies}
-\par As mentioned in finding in 4.3.4.1 Amherst College we learned that having experienced engineers can improve the implemantation of the project. Working with experienced engineers allowed the maintenance staff at Amherst College to have access to support when dealing with small issues in the startup of their biomass boiler system. The engineers Amherst College worked with were very experienced with biomass boilers and installations. This experience instilled a sense of confidence and comfort in the staff at Amherst College. On the other hand, as listed in findings 4.3.4.2 and 4.3.4.3,after studying Sudbury Housing Development and Southern Berkshire Regional School we learned that having inexperienced engineers could delay the schedule of the project and the construction itself. 
+\par As mentioned in finding in 4.3.4.1 Amherst College we learned that having experienced engineers can improve the implementation of the project. Working with experienced engineers allowed the maintenance staff at Amherst College to have access to support when dealing with small issues in the startup of their biomass boiler system. The engineers Amherst College worked with were very experienced with biomass boilers and installations. This experience instilled a sense of confidence and comfort in the staff at Amherst College. On the other hand, as listed in findings 4.3.4.2 and 4.3.4.3,after studying Sudbury Housing Development and Southern Berkshire Regional School we learned that having inexperienced engineers could delay the schedule of the project and the construction itself. 
 
 \subsection{We recommend that the DOER provide a list of engineering firms and contractors that are familiar with each type of renewable thermal technology to each project site}
 \par The use of renewable resources is something relatively new so it is no surprise that sometimes it can be hard to find experienced engineers and contractors when installing these renewable heating and cooling systems. For this reason, we recommend that the DOER provide a list of engineering firms and contractors that are familiar with each type of renewable thermal technology to each project site. Project site leaders could use this list when searching for engineering firms/contractors to complete the installation of a renewable thermal technology, and also if they feel that they require a second opinion regarding any aspect of the project design.
