Minor changes for final eCDR submission.

--- a/FrontBackMatter/executivesummary.tex
+++ b/FrontBackMatter/executivesummary.tex
@@ -6,7 +6,7 @@
 
 \par The use of fossil fuels is both harmful to the environment and unsustainable. It is linked to many problems such as greenhouse gas emissions, which cause climate change and health issues such as cancer and respiratory problems. Furthermore, the earth's fossil fuel resources may be depleted by the end of the century.
 \par To reduce the use of fossil fuels in the Commonwealth of Massachusetts, the Global Warming Solutions Act (GWSA) was enacted in August of 2008. The GWSA created a framework for reducing heat-trapping emissions to levels that scientists believe gives humanity a chance of avoiding the worst effects of climate change. Pursuant to the GWSA, all sectors of the economy must reach a target of a 25\% reduction of greenhouse gas (GHG) emissions by 2020 and an 80\% reduction by 2050. As a result of the GWSA, many programs have been implemented by state agencies to promote energy efficiency and the use of renewable resources.
-\par The Massachusetts Department of Energy Resources (DOER) has started the SAPHIRE and Renewable Thermal Programs to help motivate the implementation of renewable resources in buildings. The focus of these programs is on buildings since buildings account for 49% of all energy used in MA, compared to the national average of 41%. These programs have made an effort toward reducing fossil fuel use in schools and public buildings in the Commonwealth, but were lacking an evaluation and explanation of existing project processes. To further the effectiveness and reach of these programs, there is a need for more evaluation and promotion. We worked with the DOER to address this issue.
+\par The Massachusetts Department of Energy Resources (DOER) has started the SAPHIRE and Renewable Thermal Programs to help motivate the implementation of renewable resources in buildings. The focus of these programs is on buildings since buildings account for 49\% of all energy used in MA, compared to the national average of 41\%. These programs have made an effort toward reducing fossil fuel use in schools and public buildings in the Commonwealth, but were lacking an evaluation and explanation of existing project processes. To further the effectiveness and reach of these programs, there is a need for more evaluation and promotion. We worked with the DOER to address this issue.
 
 \section*{Goal, Objectives and Methods}
 \par The goal of our project was \goal. In order to achieve this goal, we completed the following three research objectives to produce case studies that evaluate pilot renewable thermal programs:
