--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
   11pt,
   letterpaper,
   titlepage,
+  hidelinks,
   footinclude=true,
   headinclude=true
 ]{report}
@@ -41,7 +42,7 @@
 \pagenumbering{roman}
 \include{FrontBackMatter/abstract}
 \include{FrontBackMatter/acknowledgements}
-\include{FrontBackMatter/authorship}
+%\include{FrontBackMatter/authorship}
 \include{FrontBackMatter/executivesummary}
 \include{FrontBackMatter/contents}
 
