--- a/FrontBackMatter/abstract.tex
+++ b/FrontBackMatter/abstract.tex
@@ -5,4 +5,4 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{\numberline{}Abstract}%
 
-\par The Massachusetts Department of Energy Resources (DOER) is promoting the installation of renewable thermal systems in buildings in order to decrease the Commonwealth’s dependence on nonrenewable resources. The goal of this project was to improve and promote the installation of renewable thermal systems by evaluating three renewable thermal projects, including an air source heat pump and two biomass systems, as part of DOER programs. Through interviews and site visits, we gathered project process and performance information. We created informational fact sheets for each site detailing lessons learned for communities considering future projects. It is our hope that these case studies will lead to the implementation of more renewable thermal projects, each with more efficient implementations.
+\par The Massachusetts Department of Energy Resources (DOER) is promoting the installation of renewable thermal systems in buildings in order to decrease the Commonwealth’s dependence on nonrenewable resources. The goal of this project was to improve and promote the installation of renewable thermal systems by evaluating three renewable thermal projects, an air source heat pump and two biomass systems, that are part of DOER programs. Through interviews and site visits, we gathered project process and performance information. We created informational fact sheets for each site detailing lessons learned for communities considering future projects. It is our hope that these fact sheets will lead to the implementation of more renewable thermal projects, each with more efficient implementations.
